--- a/source/_sass/themes/_props.scss
+++ b/source/_sass/themes/_props.scss
@@ -8,7 +8,7 @@
   --r-background-color: #{c.$background-light};
 
   // Primary body text.
-  --r-main-font: serif;
+  --r-main-font: sans-serif;
   --r-main-font-size: 2.5rem;
   --r-main-color: #{c.$foreground-light};
 
